# Distributed-Systems-Course

./: README.md  commands_example.txt
Grpc/: commands_example.txt
Grpc/Client/: Cargo.toml  build.rs
Grpc/Client/src/: command_handler.rs  command_parser.rs  main.rs
Grpc/Client/src/command_handler/: local_commands.rs  remote_commands.rs
Grpc/Server/: pom.xml
Grpc/proto/: smarthome.proto
Ice/Client/: Client.sln
Ice/Client/Client/: Client.csproj  Program.cs
Ice/Server/: pom.xml
Ice/slice/: calculator.ice
RabbitMQ/Admin/: Cargo.toml
RabbitMQ/Admin/src/: main.rs
RabbitMQ/Doctor/: Cargo.toml
RabbitMQ/Doctor/src/: main.rs
RabbitMQ/Technician/: Cargo.toml
RabbitMQ/Technician/src/: main.rs
RabbitMQ/common/: Cargo.toml
RabbitMQ/common/src/: lib.rs  server.rs
ZooKeeper/: README.md  compose.yaml
ZooKeeper/Watchers/: pom.xml
ZooKeeper/conf/: Dockerfile  zoo.cfg
restapi/: pom.xml
restapi/examples/: Bored api.postman_collection.json  Open Brewery.postman_collection.json
restapi/src/main/resources/: application.properties
server_socket/: Cargo.toml
server_socket/client/: Cargo.toml
server_socket/client/src/: client.rs  lib.rs  main.rs
server_socket/core/cl_parser/: Cargo.toml
server_socket/core/cl_parser/src/: lib.rs
server_socket/core/threads/: Cargo.toml
server_socket/core/threads/src/: lib.rs
server_socket/core/tui_colorizer/: Cargo.toml
server_socket/core/tui_colorizer/src/: lib.rs
server_socket/server/: Cargo.toml
server_socket/server/src/: client.rs  lib.rs  main.rs  server.rs
(+33 files in other folders)
