[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
cl_parser = {path = "../core/cl_parser", version = "0.1.0"}
socket2 = { version = "0.3.4", features = ["reuseport"] }
threads = {path = "../core/threads", version = "0.1.0"}
tui_colorizer = {path = "../core/tui_colorizer", version = "0.1.0"}


